--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -6,11 +6,8 @@
   
 * Conventions and Terminology
 
-The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", 
-and "OPTIONAL" in this document are to be interpreted as described in RFC 2119 [RFC2119].
-
-The terms "JSON", "JSON text", "JSON value", "member", "element", "object", "array", "number", "string", "boolean", 
-"true", "false", and "null" in this document are to be interpreted as defined in RFC 4627 [RFC4627].
+The key words *MUST*, *MUST NOT*, *REQUIRED*, *SHALL*, *SHALL NOT*, *SHOULD*, *SHOULD NOT*, *RECOMMENDED*, *MAY*, 
+and *OPTIONAL* in this document are to be interpreted as described in [[https://www.ietf.org/rfc/rfc2119.txt][RFC 2119]].
 
 * Introduction
 
