--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -369,6 +369,24 @@ Component Function is a function recives two fixed arguments, inputs and exists
 
 Component Provider is a function receives an fixed argument that the type is a object and returns [[Component%20Definition][Component Definition]].
 
+* Composed Components
+
+A composed component is a IClang program has well-defined inports or exports, which means other components could
+connect and receive or send data.
+
+By this desgin, a IClang program should be able to used in another program as a component.
+
+#+BEGIN_SRC ditaa
+   +-----------------------------------------------+
+   |      +-------------+     +--------------+     |           +--------------+
+   |      |             |     |              |     |------+    |              |
+str|[]--->[]in Read out[]---->[]in Count out[]--->[]status|--->[]in Print out[]
+   |      |             |     |              |     |------+    |              |
+   |      +-------------+     +--------------+     |           +--------------+
+   +-----------------------------------------------+
+                  ReadAndCount
+#+END_SRC
+
 * Evaluation
 
 A IClang program is evaluated by ICLang interpreter. It instances procesess, connects ports betwen processes in order 
