explain firing and fire rule.

--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -434,7 +434,35 @@ A logical link between a InPort and a OutPort  which allows one process is able 
 - Sockets has same direction should be able to connect each other.
 
 ** Firing 
-TBD
+The process run the component function if firing rule is satisfied.
 
-** Firing Rules
-TBF
+*** Fire Rule
+1. No data arrived, the process does not fire.
+
+#+BEGIN_SRC
+     +------------+
+--->[]in1         |
+     |     Print  |
+--->[]in2         |
+     +------------+
+#+END_SRC
+
+2. Only one data arrived to *in1*, port, the process does not fire.
+
+#+BEGIN_SRC
+     +------------+
+--->[X]in1        |
+     |     Print  |
+--->[]in2         |
+     +------------+
+#+END_SRC
+
+3. All data arrived to *in1* and *in2* port, the process fires.
+
+#+BEGIN_SRC
+     +------------+
+--->[X]in1        |
+     |     Print  |
+--->[X]in2        |
+     +------------+
+#+END_SRC
