--- a/spec/spec-iclang.org
+++ b/spec/spec-iclang.org
@@ -433,6 +433,12 @@ A logical link between a InPort and a OutPort  which allows one process is able 
 - Each socket should not be connect to another socket of a process it belongs to.
 - Sockets has same direction should be able to connect each other.
 
+** Binding variables
+TBD
+** Instancing components
+TBD
+** Connecting processes
+TBD
 ** Firing 
 The process run the component function if firing rule is satisfied.
 
