--- a/README.org
+++ b/README.org
@@ -6,7 +6,11 @@
 
 /WARNING: This is work in progress. The APIs will remain in flux until 1.0.0. Suggestions welcome!/
 
-Internet Combinator Language, ICLang in short, is a cordination language for compositing things of internet.
+The things of internet is a highly interconnected collection of computational resources, and 
+as such it can be considred as forming a big computer. It is obviously to have some kind 
+of abstract programming language runs on this wired computer.
+
+Internet Combinator Language, ICLang in short, is a cordination language for compositing things on internet.
 and designed in dataflow mindset with [[en.wikipedia.org/wiki/Configurable_modularity][configurable modularity]].
 
 Not like how we do when we building a application in conventional programming language, building a pplication
